# bot-mental-health

./: model_training.py  pyproject.toml  requirements.txt
flask_app/: app.py  utils.py
flask_app/model/: classes.pkl  words.pkl
flask_app/templates/: index.html
model/: chatbot_model.keras  intents.json
