[tool.poetry]
name = "bot-mental-health"
version = "0.1.0"
description = ""
authors = ["Guilherme de Souza Melo <guilherme.melo10@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.14"
nltk = "^3.9.1"
Flask = "^3.1.0"
numpy = "1.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
